[project]
name = "etl-prometheus2clickhouse"
version = "2.0.0rc3"
description = "ETL job for transferring metrics from Prometheus to ClickHouse using ClickHouse for state storage."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "logging-objects-with-schema>=0.4.0",
  "clickhouse-connect>=0.10.0"
]

  [[project.authors]]
  name = "Dmitrii Safronov"
  email = "dhameoelin+etl-prometheus2clickhouse@gmail.com"

[dependency-groups]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "black>=23.0.0",
  "isort>=5.12.0",
  "flake8>=6.0.0",
  "flake8-pyproject>=1.2.3",
  "mypy>=1.8.0",
  "types-requests",
  "bandit>=1.7.5",
  "pre-commit>=3.5.0",
  "vulture>=2.0.0"
]

[tool.pytest.ini_options]
testpaths = [ "tests" ]
python_files = [ "test_*.py" ]
python_classes = [ "Test*" ]
python_functions = [ "test_*" ]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.black]
line-length = 88
include = "\\.pyi?$"
extend-exclude = """
/(
  \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | build
  | dist
)/
"""

[tool.flake8]
max-line-length = 88
extend-ignore = [ "E203", "W503" ]
exclude = [ ".venv", "__pycache__", ".git", "htmlcov" ]

[tool.mypy]
exclude = "tests/"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.bandit]
exclude_dirs = [ ".venv", "__pycache__", ".git", "htmlcov", "tests" ]

[tool.coverage.run]
source = [ "." ]
omit = [ "tests/*" ]
branch = true

[tool.coverage.report]
exclude_lines = [
  "def __repr__",
  "if self\\.debug",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "@(abc\\.)?abstractmethod"
]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.vulture]
min_confidence = 80
exclude = [ ".venv", "__pycache__" ]
ignore_names = [ "cls" ]
paths = [ "." ]
