[project]
name = "etl-prometheus2clickhouse"
version = "5.1.6"
description = "ETL job for transferring metrics from Prometheus to ClickHouse using ClickHouse for state storage."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "requests>=2.33.1",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.1",
  "logging-objects-with-schema>=1.0.0",
  "clickhouse-connect>=0.15.1",
  "ijson>=3.2.0",
  "ecs-logging>=2.2.0"
]

  [[project.authors]]
  name = "Dmitrii Safronov"
  email = "dhameoelin+etl-prometheus2clickhouse@gmail.com"

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "black>=26.5.0",
  "isort>=5.12.0",
  "flake8>=6.0.0",
  "flake8-pyproject>=1.2.3",
  "mypy>=2.0.0",
  "types-requests",
  "bandit>=1.7.5",
  "pre-commit>=4.6.0",
  "vulture>=2.16"
]

[tool.pytest.ini_options]
testpaths = [ "tests" ]
python_files = [ "test_*.py" ]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
include = "\\.pyi?$"

[tool.flake8]
max-line-length = 88
extend-ignore = [ "E203", "W503" ]
exclude = [ ".venv", "htmlcov" ]

[tool.mypy]
exclude = "tests/"
mypy_path = "stubs"
strict = true
warn_unused_configs = true
warn_unreachable = true

[tool.bandit]
exclude_dirs = [ ".venv", "htmlcov", "tests" ]

[tool.coverage.run]
source = [ "." ]
omit = [ "tests/*" ]
branch = true

[tool.coverage.report]
fail_under = 100
exclude_lines = [
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "@(abc\\.)?abstractmethod",
  "pragma: no cover"
]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.vulture]
min_confidence = 80
exclude = [ ".venv" ]
ignore_names = [ "cls" ]
paths = [ "." ]
